--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <style>
         :root {
             --pink: #ffafcc;
-            --soft-white: #f8f9fa;
             --text-color: #5e548e;
             --wrong-red: #ff8fa3;
             --right-green: #b9fbc0;
+        }
+
+        * {
+            box-sizing: border-box;
         }
 
         body, html {
@@ -22,75 +25,76 @@
             overflow: hidden;
             font-family: 'Poppins', sans-serif;
             background-color: #fff0f3;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* Canvas Background */
+        /* Moving Line Background */
         #lineCanvas {
             position: fixed;
             top: 0;
             left: 0;
             z-index: 1;
+            width: 100%;
+            height: 100%;
         }
 
         .container {
-            background: rgba(255, 255, 255, 0.9);
-            padding: 2.5rem;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 2rem;
             border-radius: 30px;
             box-shadow: 0 15px 35px rgba(0,0,0,0.1);
             width: 90%;
-            max-width: 400px;
+            max-width: 380px;
             text-align: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            position: relative;
             z-index: 10;
             backdrop-filter: blur(5px);
+            border: 2px solid #fff;
         }
 
         h1, h2 {
             font-family: 'Dancing Script', cursive;
             color: var(--text-color);
-            margin-bottom: 20px;
+            margin: 0 0 15px 0;
         }
 
         .page { display: none; }
-        .active { display: block; animation: fadeIn 0.5s forwards; }
+        .active { display: block; animation: fadeIn 0.5s ease; }
 
-        /* Cute Instructions List */
         .instruction-list {
             text-align: left;
             margin: 20px 0;
             color: #777;
+            font-size: 0.9rem;
         }
-        .instruction-item {
-            margin-bottom: 10px;
-            display: flex;
-            align-items: center;
-        }
+        .instruction-item { margin-bottom: 12px; }
 
         .options-grid {
-            display: grid;
-            gap: 12px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
             margin-top: 20px;
         }
 
         button {
-            padding: 14px;
+            width: 100%;
+            padding: 12px;
             border: 2px solid var(--pink);
             background: white;
             border-radius: 15px;
             cursor: pointer;
-            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            transition: all 0.3s ease;
             color: var(--text-color);
             font-weight: bold;
+            font-size: 0.95rem;
         }
 
         button:hover {
-            transform: translateY(-3px);
             background: var(--pink);
             color: white;
-            box-shadow: 0 5px 15px rgba(255, 175, 204, 0.4);
+            transform: translateY(-2px);
         }
 
         .shake {
@@ -101,21 +105,19 @@
 
         @keyframes shake {
             0%, 100% { transform: translateX(0); }
-            20% { transform: translateX(-10px); }
-            40% { transform: translateX(10px); }
-            60% { transform: translateX(-10px); }
-            80% { transform: translateX(10px); }
+            25% { transform: translateX(-8px); }
+            75% { transform: translateX(8px); }
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: translate(-50%, -45%); }
-            to { opacity: 1; transform: translate(-50%, -50%); }
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         .particle {
             position: absolute;
-            width: 8px;
-            height: 8px;
+            width: 6px;
+            height: 6px;
             border-radius: 50%;
             pointer-events: none;
             z-index: 999;
@@ -129,13 +131,13 @@
 <div class="container">
     <div id="instruction-page" class="page active">
         <h1>Hi Sweetie! 🌸</h1>
-        <p>Before we start, please follow these cute instructions:</p>
+        <p style="font-size: 0.9rem;">Follow these cute instructions:</p>
         <div class="instruction-list">
-            <div class="instruction-item">🎀 1. Smile for no reason.</div>
-            <div class="instruction-item">🎀 2. Answer with your heart.</div>
-            <div class="instruction-item">🎀 3. Unlock your special surprise!</div>
+            <div class="instruction-item">✨ 1. Smile for no reason.</div>
+            <div class="instruction-item">✨ 2. Answer with your heart.</div>
+            <div class="instruction-item">✨ 3. Unlock your special surprise!</div>
         </div>
-        <button class="btn" onclick="startQuiz()" style="width:100%">I'm Ready! ✨</button>
+        <button onclick="startQuiz()">I'm Ready! ✨</button>
     </div>
 
     <div id="q1" class="page">
@@ -207,18 +209,18 @@
     <div id="result-page" class="page">
         <h2>Results!</h2>
         <p id="result-text"></p>
-        <button id="gift-btn" style="display:none; width:100%" onclick="showGift()">Claim Your Gift</button>
+        <button id="gift-btn" style="display:none;" onclick="showGift()">Claim Your Gift</button>
     </div>
 
     <div id="gift-page" class="page">
         <h1>Happy Valentine's Day! 💌</h1>
-        <div id="gift-box" onclick="revealMessage()" style="font-size: 80px; cursor: pointer;">🎁</div>
-        <p id="final-message" style="margin-top:20px; font-weight: bold;"></p>
+        <div id="gift-box" onclick="revealMessage()" style="font-size: 70px; cursor: pointer; margin: 10px 0;">🎁</div>
+        <p id="final-message" style="font-weight: bold; color: var(--text-color);"></p>
     </div>
 </div>
 
 <script>
-    // --- BACKGROUND ANIMATION ---
+    // BG Animation
     const canvas = document.getElementById('lineCanvas');
     const ctx = canvas.getContext('2d');
     let lines = [];
@@ -231,14 +233,12 @@
     resize();
 
     class Line {
-        constructor() {
-            this.reset();
-        }
+        constructor() { this.reset(); }
         reset() {
             this.x = Math.random() * canvas.width;
             this.y = Math.random() * canvas.height;
             this.len = Math.random() * 80 + 20;
-            this.speed = Math.random() * 2 + 0.5;
+            this.speed = Math.random() * 1.5 + 0.5;
             this.opacity = Math.random() * 0.4 + 0.1;
         }
         draw() {
@@ -263,7 +263,7 @@
     }
     animate();
 
-    // --- LOGIC ---
+    // Logic
     let currentStep = 1;
     let score = 0;
 
@@ -273,59 +273,46 @@
     }
 
     function next(btn, isCorrect) {
-        handleFeedback(btn, isCorrect, () => {
-            if(isCorrect) score++;
-            document.getElementById(`q${currentStep}`).classList.remove('active');
-            currentStep++;
-            document.getElementById(`q${currentStep}`).classList.add('active');
-        });
-    }
-
-    function checkScore(btn, isCorrect) {
-        handleFeedback(btn, isCorrect, () => {
-            if(isCorrect) score++;
-            document.getElementById(`q6`).classList.remove('active');
-            document.getElementById('result-page').classList.add('active');
-            const text = document.getElementById('result-text');
-            if(score >= 3) {
-                text.innerText = `Yay! You got ${score}/6 correct!`;
-                document.getElementById('gift-btn').style.display = 'inline-block';
-            } else {
-                text.innerText = `You got ${score}/6. I still love you!`;
-                document.getElementById('gift-btn').style.display = 'inline-block'; 
-                document.getElementById('gift-btn').innerText = "Get Love Anyway";
-            }
-        });
-    }
-
-    function handleFeedback(btn, isCorrect, callback) {
-        if (isCorrect) {
+        if(isCorrect) {
+            score++;
             btn.style.backgroundColor = "#b9fbc0";
             createFireworks();
-            setTimeout(callback, 800);
+            setTimeout(() => {
+                document.getElementById(`q${currentStep}`).classList.remove('active');
+                currentStep++;
+                document.getElementById(`q${currentStep}`).classList.add('active');
+            }, 800);
         } else {
             btn.classList.add('shake');
             setTimeout(() => {
                 btn.classList.remove('shake');
-                callback();
+                document.getElementById(`q${currentStep}`).classList.remove('active');
+                currentStep++;
+                document.getElementById(`q${currentStep}`).classList.add('active');
             }, 500);
         }
     }
 
+    function checkScore(btn, isCorrect) {
+        if(isCorrect) score++;
+        document.getElementById(`q6`).classList.remove('active');
+        document.getElementById('result-page').classList.add('active');
+        const text = document.getElementById('result-text');
+        text.innerText = `You got ${score}/6 correct!`;
+        document.getElementById('gift-btn').style.display = 'block';
+    }
+
     function createFireworks() {
-        const colors = ['#ffafcc', '#ffc8dd', '#bde0fe', '#a2d2ff'];
-        for (let i = 0; i < 20; i++) {
+        const colors = ['#ffafcc', '#bde0fe', '#a2d2ff'];
+        for (let i = 0; i < 15; i++) {
             const p = document.createElement('div');
             p.className = 'particle';
             p.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
             p.style.left = '50%'; p.style.top = '50%';
             document.body.appendChild(p);
-            const destX = (Math.random() - 0.5) * 600;
-            const destY = (Math.random() - 0.5) * 600;
-            p.animate([
-                { transform: 'translate(-50%, -50%) scale(1)', opacity: 1 },
-                { transform: `translate(${destX}px, ${destY}px) scale(0)`, opacity: 0 }
-            ], 1000).onfinish = () => p.remove();
+            const dX = (Math.random() - 0.5) * 400;
+            const dY = (Math.random() - 0.5) * 400;
+            p.animate([{opacity: 1}, {transform: `translate(${dX}px, ${dY}px)`, opacity: 0}], 1000).onfinish = () => p.remove();
         }
     }
 
@@ -336,7 +323,7 @@
 
     function revealMessage() {
         document.getElementById('gift-box').innerHTML = "💖";
-        document.getElementById('final-message').innerText = "You are my favorite person in the whole universe!";
+        document.getElementById('final-message').innerText = "You are the best thing that ever happened to me!";
         createFireworks();
     }
 </script>
