--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
 <div class="container">
     <div id="instruction-page" class="page active">
-        <h1>Hi Sweetie! 🌸</h1>
+        <h1>Hy Archana Madhu! 🌸</h1>
         <p style="font-size: 0.9rem;">Follow these cute instructions:</p>
         <div class="instruction-list">
-            <div class="instruction-item">✨ 1. Smile for no reason.</div>
+            <div class="instruction-item">✨ 1. Don’t Smile .</div>
             <div class="instruction-item">✨ 2. Answer with your heart.</div>
-            <div class="instruction-item">✨ 3. Unlock your special surprise!</div>
+            <div class="instruction-item">✨ 3. Unlock your Passcode For your surprise</div>
         </div>
         <button onclick="startQuiz()">I'm Ready! ✨</button>
     </div>
@@ -144,9 +144,9 @@
         <h2>Question 1</h2>
         <p>Where did we first meet?</p>
         <div class="options-grid">
-            <button onclick="next(this, true)">The Coffee Shop</button>
-            <button onclick="next(this, false)">The Park</button>
-            <button onclick="next(this, false)">In School</button>
+            <button onclick="next(this, true)">School</button>
+            <button onclick="next(this, false)">Onam Day</button>
+            <button onclick="next(this, false)">college</button>
             <button onclick="next(this, false)">Online</button>
         </div>
     </div>
@@ -334,8 +334,8 @@
     }
 
     function revealMessage() {
-        document.getElementById('gift-box').innerHTML = "💖";
-        document.getElementById('final-message').innerText = "You are the best thing that ever happened to me!";
+        document.getElementById('gift-box').innerHTML = "🥹🫶🏻😙";
+        document.getElementById('final-message').innerText = "You are the best thing that ever happened to me! And The password is Archanamadhu@7736";
         createFireworks();
     }
 </script>
