--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <div class="container">
     <div id="instruction-page" class="page active">
         <h1>Hy Archana Madhu! 🌸</h1>
-        <p style="font-size: 0.9rem;">Follow these cute instructions:</p>
+        <p style="font-size: 0.9rem;">Follow the instruction:</p>
         <div class="instruction-list">
             <div class="instruction-item">✨ 1. Don’t Smile .</div>
             <div class="instruction-item">✨ 2. Answer with your heart.</div>
