--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
 
 <div class="container">
     <div id="instruction-page" class="page active">
-        <h1>Hy Archana Madhu! 🌸</h1>
+        <h1>Hyy Archana Madhu! 🌸</h1>
         <p style="font-size: 0.9rem;">Follow the instruction:</p>
         <div class="instruction-list">
-            <div class="instruction-item">✨ 1. Don’t Smile .</div>
-            <div class="instruction-item">✨ 2. Answer with your heart.</div>
-            <div class="instruction-item">✨ 3. Unlock your Passcode For your surprise</div>
+            <div class="instruction-item">✨ 1. Don’t Smile.</div>
+            <div class="instruction-item">✨ 2. Correct atleast 3.</div>
+            <div class="instruction-item">✨ 3. Unlock your Passcode For your     surprise</div>
         </div>
-        <button onclick="startQuiz()">I'm Ready! ✨</button>
+        <button onclick="startQuiz()">Babbee Are you Ready! ✨</button>
     </div>
 
     <div id="q1" class="page">
@@ -153,42 +153,42 @@
 
     <div id="q2" class="page">
         <h2>Question 2</h2>
-        <p>What is my favorite color on you?</p>
+        <p>Which of our dates will always be your favourite?</p>
         <div class="options-grid">
-            <button onclick="next(this, false)">Blue</button>
-            <button onclick="next(this, true)">Red</button>
-            <button onclick="next(this, false)">Black</button>
-            <button onclick="next(this, false)">White</button>
+            <button onclick="next(this, false)">kadhal cafe</button>
+            <button onclick="next(this, true)">All of these</button>
+            <button onclick="next(this, false)">Coocon</button>
+            <button onclick="next(this, false)">tvm days</button>
         </div>
     </div>
 
     <div id="q3" class="page">
         <h2>Question 3</h2>
-        <p>Which month is our anniversary?</p>
+        <p> Which of the following outfits did I like you wearing the most?</p>
         <div class="options-grid">
-            <button onclick="next(this, false)">January</button>
-            <button onclick="next(this, false)">June</button>
-            <button onclick="next(this, true)">October</button>
-            <button onclick="next(this, false)">December</button>
+            <button onclick="next(this, false)">Casual Outfits</button>
+            <button onclick="next(this, false)">Traditional Outfits</button>
+            <button onclick="next(this, true)">All of these( bzc its you)</button>
+            <button onclick="next(this, false)">The Hot Outfits</button>
         </div>
     </div>
 
     <div id="q4" class="page">
         <h2>Question 4</h2>
-        <p>What was our first movie together?</p>
+        <p>Which of day do you think I still remember clearly?</p>
         <div class="options-grid">
-            <button onclick="next(this, true)">Titanic</button>
-            <button onclick="next(this, false)">The Notebook</button>
-            <button onclick="next(this, false)">About Time</button>
-            <button onclick="next(this, false)">Shrek</button>
+            <button onclick="next(this, true)">Tvm Days</button>
+            <button onclick="next(this, false)">Kadhal Cafe</button>
+            <button onclick="next(this, false)">Coocon</button>
+            <button onclick="next(this, false)">Ayushus</button>
         </div>
     </div>
 
     <div id="q5" class="page">
         <h2>Question 5</h2>
-        <p>Who said "I love you" first?</p>
+        <p>When I looked at you that day, what do you think I felt</p>
         <div class="options-grid">
-            <button onclick="next(this, true)">Me</button>
+            <button onclick="next(this, true)"></button>
             <button onclick="next(this, false)">You</button>
             <button onclick="next(this, false)">Both at once</button>
             <button onclick="next(this, false)">Still waiting!</button>
