--- a/index.html
+++ b/index.html
@@ -188,21 +188,21 @@
         <h2>Question 5</h2>
         <p>When I looked at you that day, what do you think I felt</p>
         <div class="options-grid">
-            <button onclick="next(this, true)"></button>
-            <button onclick="next(this, false)">You</button>
-            <button onclick="next(this, false)">Both at once</button>
-            <button onclick="next(this, false)">Still waiting!</button>
+            <button onclick="next(this, true)">Fully Nervous</button>
+            <button onclick="next(this, false)">clam</button>
+            <button onclick="next(this, false)">shy</button>
+            <button onclick="next(this, false)">Happyy</button>
         </div>
     </div>
 
     <div id="q6" class="page">
         <h2>Question 6</h2>
-        <p>What is my favorite snack?</p>
+        <p>What is my favorite Food?</p>
         <div class="options-grid">
-            <button onclick="checkScore(this, false)">Pizza</button>
-            <button onclick="checkScore(this, true)">Chocolate</button>
-            <button onclick="checkScore(this, false)">Ice Cream</button>
-            <button onclick="checkScore(this, false)">Chips</button>
+            <button onclick="checkScore(this, false)">Alfamm</button>
+            <button onclick="checkScore(this, true)">Youhh</button>
+            <button onclick="checkScore(this, false)">Mandhi</button>
+            <button onclick="checkScore(this, false)">Mommos and orange Juice</button>
         </div>
     </div>
 
