--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 
     <div id="q1" class="page">
         <h2>Question 1</h2>
-        <p>Where did we first meet?</p>
+        <p>What am I to you?</p>
         <div class="options-grid">
-            <button onclick="next(this, true)">School</button>
-            <button onclick="next(this, false)">Onam Day</button>
-            <button onclick="next(this, false)">college</button>
-            <button onclick="next(this, false)">Online</button>
+            <button onclick="next(this, true)">All of these</button>
+            <button onclick="next(this, false)">My comfort</button>
+            <button onclick="next(this, false)">Special person</button>
+            <button onclick="next(this, false)">Most fav person ever</button>
         </div>
     </div>
 
@@ -185,18 +185,18 @@
             <button onclick="next(this, false)">Your Eyes</button>
             <button onclick="next(this, false)">Your Smile</button>
             <button onclick="next(this, true)">Everything!</button>
-            <button onclick="next(this, false)">Your Voice</button>
+            <button onclick="next(this, false)">Effortless Movement</button>
         </div>
     </div>
 
     <div id="q9" class="page">
         <h2>Question 9</h2>
-        <p>Where do I want to travel with you?</p>
+        <p>Which is my fav thing you says?</p>
         <div class="options-grid">
-            <button onclick="next(this, false)">Paris</button>
-            <button onclick="next(this, true)">Everywhere</button>
-            <button onclick="next(this, false)">Mountains</button>
-            <button onclick="next(this, false)">Beaches</button>
+            <button onclick="next(this, false)">Bibinee</button>
+            <button onclick="next(this, true)">Entha Bibinneee</button>
+            <button onclick="next(this, false)">Babbyyy</button>
+            <button onclick="next(this, false)">Poddaaa</button>
         </div>
     </div>
 
@@ -213,7 +213,7 @@
 
     <div id="q11" class="page">
         <h2>Question 11</h2>
-        <p>Will you be my Valentine forever?</p>
+        <p>Will you be my Valentine? </p>
         <div class="options-grid">
             <button onclick="checkScore(this, true)">YES!</button>
             <button onclick="checkScore(this, false)">No way</button>
@@ -227,7 +227,7 @@
     </div>
 
     <div id="gift-page" class="page">
-        <h1>Happy Valentine's Day! 💌</h1>
+        <h1> Will you be my valentine forever Tap on the gift box and unlock your Passcode 💌</h1>
         <div id="gift-box" onclick="revealMessage()" style="font-size: 70px; cursor: pointer; margin: 10px 0;">🎁</div>
         <p id="final-message" style="font-weight: bold; color: var(--text-color);"></p>
     </div>
