--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <p style="font-size: 0.9rem;">Follow the instruction:</p>
         <div class="instruction-list">
             <div class="instruction-item">✨ 1. Don’t Smile.</div>
-            <div class="instruction-item">✨ 2. Correct atleast 8.</div>
-            <div class="instruction-item">✨ 3. Unlock your Passcode for your surprise</div>
+            <div class="instruction-item">✨ 2. Correct Atleast 8.</div>
+            <div class="instruction-item">✨ 3. Unlock your Passcode for your   surprise</div>
         </div>
         <button onclick="startQuiz()">Babbee Are you Ready! ✨</button>
     </div>
@@ -117,9 +117,9 @@
         <p>Which of our dates will always be your favourite?</p>
         <div class="options-grid">
             <button onclick="next(this, false)">kadhal cafe</button>
-            <button onclick="next(this, true)">All of these</button>
+            <button onclick="next(this, true)">Tvm Cafee</button>
             <button onclick="next(this, false)">Coocon</button>
-            <button onclick="next(this, false)">tvm days</button>
+            <button onclick="next(this, false)">Ayushus</button>
         </div>
     </div>
 
@@ -227,7 +227,7 @@
     </div>
 
     <div id="gift-page" class="page">
-        <h1> Will you be my valentine forever Tap on the gift box and unlock your Passcode 💌</h1>
+        <h1>Happyy Valentines Dayy babbyyy 💌</h1>
         <div id="gift-box" onclick="revealMessage()" style="font-size: 70px; cursor: pointer; margin: 10px 0;">🎁</div>
         <p id="final-message" style="font-weight: bold; color: var(--text-color);"></p>
     </div>
