--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <div id="q5" class="page">
         <h2>Question 5</h2>
-        <p>When I looked at you that day, what did I feel?</p>
+        <p>When I looked at you first day, what did I feel?</p>
         <div class="options-grid">
             <button onclick="next(this, true)">Fully Nervous</button>
             <button onclick="next(this, false)">Calm</button>
