--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             display: flex; justify-content: center; align-items: center;
         }
 
-        /* Layered Moving Backgrounds */
         #lineCanvas, #flowerCanvas {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
         }
@@ -32,52 +31,61 @@
         #flowerCanvas { z-index: 2; pointer-events: none; }
 
         .container {
-            background: rgba(255, 255, 255, 0.92);
-            padding: 2.5rem;
-            border-radius: 40px;
-            box-shadow: 0 20px 50px rgba(94, 84, 142, 0.2);
-            width: 90%;
-            max-width: 400px;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 2rem;
+            border-radius: 30px;
+            box-shadow: 0 15px 35px rgba(94, 84, 142, 0.15);
+            width: 85%;
+            max-width: 350px;
             text-align: center;
             position: relative;
             z-index: 10;
-            backdrop-filter: blur(8px);
-            border: 3px solid #fff;
+            backdrop-filter: blur(10px);
+            border: 2px solid #fff;
+            /* Fix for buttons floating out */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
-        h1, h2 { font-family: 'Dancing Script', cursive; color: var(--text-color); margin: 0 0 15px 0; }
+        h1, h2 { font-family: 'Dancing Script', cursive; color: var(--text-color); margin: 0 0 10px 0; }
+        p { color: var(--text-color); font-size: 0.95rem; margin-bottom: 20px; }
 
-        .page { display: none; }
-        .active { display: block; animation: slideNext 0.6s ease-out; }
+        .page { display: none; width: 100%; }
+        .active { display: block; animation: slideIn 0.5s ease-out; }
 
-        /* Transition Animation */
-        @keyframes slideNext {
-            from { opacity: 0; transform: translateX(50px); }
-            to { opacity: 1; transform: translateX(0); }
+        @keyframes slideIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
-        .instruction-list { text-align: left; margin: 20px 0; color: #777; font-size: 0.9rem; }
-        .instruction-item { margin-bottom: 12px; }
-
-        .options-grid { display: flex; flex-direction: column; gap: 10px; margin-top: 20px; }
+        .options-grid {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            width: 100%;
+            align-items: center; /* Keeps buttons centered */
+        }
 
         button {
             width: 100%;
-            padding: 14px;
+            max-width: 280px;
+            padding: 12px 15px;
             border: 2px solid var(--pink);
             background: white;
             border-radius: 20px;
             cursor: pointer;
             transition: all 0.3s ease;
             color: var(--text-color);
-            font-weight: bold;
-            font-size: 1rem;
+            font-weight: 500;
+            font-size: 0.9rem;
+            outline: none;
+            -webkit-tap-highlight-color: transparent;
         }
 
-        button:hover { background: var(--pink); color: white; transform: scale(1.05); }
+        button:hover { background: var(--pink); color: white; transform: scale(1.02); }
 
-        .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: white !important; }
-
+        .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: white !important; border-color: var(--wrong-red) !important; }
         @keyframes shake {
             0%, 100% { transform: translateX(0); }
             25% { transform: translateX(-8px); }
@@ -85,21 +93,15 @@
         }
 
         #gift-box {
-            font-size: 100px; cursor: pointer; display: inline-block;
-            transition: 0.3s; animation: wobble 2s infinite ease-in-out;
+            font-size: 80px; cursor: pointer; display: inline-block;
+            animation: wobble 2s infinite ease-in-out;
         }
         @keyframes wobble {
-            0%, 100% { transform: rotate(0) scale(1); }
-            50% { transform: rotate(10deg) scale(1.1); }
-        }
-        .pop-out { animation: pop 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards; }
-        @keyframes pop { 
-            0% { transform: scale(1); } 
-            50% { transform: scale(1.5); } 
-            100% { transform: scale(1); } 
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.1) rotate(5deg); }
         }
 
-        .particle { position: absolute; width: 8px; height: 8px; border-radius: 50%; pointer-events: none; z-index: 999; }
+        .particle { position: absolute; width: 6px; height: 6px; border-radius: 50%; pointer-events: none; z-index: 999; }
     </style>
 </head>
 <body>
@@ -110,13 +112,8 @@
 <div class="container">
     <div id="instruction-page" class="page active">
         <h1>Hyy Archana Madhu! 🌸</h1>
-        <p>Follow the instruction:</p>
-        <div class="instruction-list">
-            <div class="instruction-item">✨ 1. Don’t Smile.</div>
-            <div class="instruction-item">✨ 2. Correct **EVERY** answer (11/11).</div>
-            <div class="instruction-item">✨ 3. Unlock your Passcode for your surprise</div>
-        </div>
-        <button onclick="startQuiz()">Babbee Are you Ready! ✨</button>
+        <p>Correct **EVERY** answer (11/11) to unlock your surprise!</p>
+        <button onclick="startQuiz()">Are you Ready Babby! ✨</button>
     </div>
 
     <div id="q1" class="page">
@@ -145,9 +142,9 @@
         <h2>Question 3</h2>
         <p>Which outfits did I like you wearing the most?</p>
         <div class="options-grid">
-            <button onclick="next(this, false)">Casual Outfits</button>
-            <button onclick="next(this, false)">Traditional Outfits</button>
             <button onclick="next(this, true)">All of these (bzc its you)</button>
+            <button onclick="next(this, false)">Traditional Outfits</button>
+            <button onclick="next(this, false)">Casual Outfits</button>
             <button onclick="next(this, false)">The Hot Outfits</button>
         </div>
     </div>
@@ -178,8 +175,8 @@
         <h2>Question 6</h2>
         <p>What is my favorite Food?</p>
         <div class="options-grid">
-            <button onclick="next(this, false)">Alfamm</button>
             <button onclick="next(this, true)">Youhh</button>
+            <button onclick="next(this, false)">Alfamm</button>
             <button onclick="next(this, false)">Mandhi</button>
             <button onclick="next(this, false)">Momos and orange Juice</button>
         </div>
@@ -189,8 +186,8 @@
         <h2>Question 7</h2>
         <p>Who is more annoying?</p>
         <div class="options-grid">
-            <button onclick="next(this, false)">Me</button>
             <button onclick="next(this, true)">Definitely You</button>
+            <button onclick="next(this, false)">Me</button>
             <button onclick="next(this, false)">Both of us</button>
             <button onclick="next(this, false)">Neither</button>
         </div>
@@ -200,9 +197,9 @@
         <h2>Question 8</h2>
         <p>What is my favorite thing about you?</p>
         <div class="options-grid">
+            <button onclick="next(this, true)">Everything!</button>
             <button onclick="next(this, false)">Your Eyes</button>
             <button onclick="next(this, false)">Your Smile</button>
-            <button onclick="next(this, true)">Everything!</button>
             <button onclick="next(this, false)">Effortless Movement</button>
         </div>
     </div>
@@ -211,8 +208,8 @@
         <h2>Question 9</h2>
         <p>Which is my fav thing you says?</p>
         <div class="options-grid">
-            <button onclick="next(this, false)">Bibinee</button>
             <button onclick="next(this, true)">Entha Bibinneee</button>
+            <button onclick="next(this, false)">Bibinee</button>
             <button onclick="next(this, false)">Babbyyy</button>
             <button onclick="next(this, false)">Poddaaa</button>
         </div>
@@ -245,29 +242,25 @@
     </div>
 
     <div id="gift-page" class="page">
-        <h1>Happyy Valentines Dayy 💌</h1>
+        <h1>Happyy Valentine's Day! 💌</h1>
         <div id="gift-box" onclick="revealMessage()">🎁</div>
         <p id="final-message" style="font-weight: bold; color: var(--text-color); margin-top: 15px;"></p>
     </div>
 </div>
 
 <script>
-    // BG 1: Lines Animation
+    // Background Animations (Lines & Flowers)
     const lCanvas = document.getElementById('lineCanvas');
     const lCtx = lCanvas.getContext('2d');
-    let lines = [];
-
-    // BG 2: Flower Petals Animation
     const fCanvas = document.getElementById('flowerCanvas');
     const fCtx = fCanvas.getContext('2d');
-    let petals = [];
+    let lines = [], petals = [];
 
     function resize() {
         lCanvas.width = fCanvas.width = window.innerWidth;
         lCanvas.height = fCanvas.height = window.innerHeight;
     }
-    window.addEventListener('resize', resize);
-    resize();
+    window.addEventListener('resize', resize); resize();
 
     class Line {
         constructor() { this.reset(); }
@@ -276,12 +269,11 @@
             this.y = Math.random() * lCanvas.height;
             this.len = Math.random() * 80 + 20;
             this.speed = Math.random() * 1.5 + 0.5;
-            this.opacity = Math.random() * 0.4 + 0.1;
+            this.opacity = Math.random() * 0.3;
         }
         draw() {
             lCtx.beginPath();
             lCtx.strokeStyle = `rgba(255, 175, 204, ${this.opacity})`;
-            lCtx.lineWidth = 2;
             lCtx.moveTo(this.x, this.y);
             lCtx.lineTo(this.x + this.len, this.y - this.len);
             lCtx.stroke();
@@ -295,41 +287,31 @@
         reset() {
             this.x = Math.random() * fCanvas.width;
             this.y = -20;
-            this.size = Math.random() * 10 + 5;
+            this.size = Math.random() * 12 + 8;
             this.speed = Math.random() * 1 + 0.5;
-            this.rot = Math.random() * 360;
-            this.rotSpeed = Math.random() * 2 - 1;
             this.emoji = ['🌸', '✨', '💕', '🌷'][Math.floor(Math.random()*4)];
         }
         draw() {
             fCtx.font = `${this.size}px serif`;
-            fCtx.save();
-            fCtx.translate(this.x, this.y);
-            fCtx.rotate(this.rot * Math.PI / 180);
-            fCtx.fillText(this.emoji, 0, 0);
-            fCtx.restore();
+            fCtx.fillText(this.emoji, this.x, this.y);
             this.y += this.speed;
             this.x += Math.sin(this.y / 50);
-            this.rot += this.rotSpeed;
             if (this.y > fCanvas.height) this.reset();
         }
     }
 
     for(let i=0; i<40; i++) lines.push(new Line());
-    for(let i=0; i<25; i++) petals.push(new Petal());
+    for(let i=0; i<20; i++) petals.push(new Petal());
 
     function animate() {
         lCtx.clearRect(0,0,lCanvas.width, lCanvas.height);
         fCtx.clearRect(0,0,fCanvas.width, fCanvas.height);
-        lines.forEach(l => l.draw());
-        petals.forEach(p => p.draw());
+        lines.forEach(l => l.draw()); petals.forEach(p => p.draw());
         requestAnimationFrame(animate);
     }
     animate();
 
-    // Logic and Transitions
-    let currentStep = 1;
-    let score = 0;
+    let currentStep = 1; let score = 0;
 
     function startQuiz() {
         document.getElementById('instruction-page').classList.remove('active');
@@ -337,13 +319,9 @@
     }
 
     function next(btn, isCorrect) {
-        if(isCorrect) {
-            score++;
-            btn.style.backgroundColor = "#b9fbc0";
-            createFireworks();
-        } else {
-            btn.classList.add('shake');
-        }
+        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; createFireworks(); }
+        else { btn.classList.add('shake'); }
+        
         setTimeout(() => {
             document.getElementById(`q${currentStep}`).classList.remove('active');
             currentStep++;
@@ -352,56 +330,44 @@
     }
 
     function checkScore(btn, isCorrect) {
-        if(isCorrect) score++;
-        else btn.classList.add('shake');
-
+        if(isCorrect) score++; else btn.classList.add('shake');
         setTimeout(() => {
             document.getElementById(`q11`).classList.remove('active');
             document.getElementById('result-page').classList.add('active');
-            const text = document.getElementById('result-text');
-            const giftBtn = document.getElementById('gift-btn');
-            
-            if (score === 11) {
-                text.innerText = `Perfect! You got ${score}/11 correct! ✨`;
-                giftBtn.style.display = 'block';
-                giftBtn.innerText = "Claim Your Gift";
-                giftBtn.onclick = showGift;
+            const resText = document.getElementById('result-text');
+            const gBtn = document.getElementById('gift-btn');
+            if(score === 11) {
+                resText.innerText = "11/11! You are perfect! ✨";
+                gBtn.style.display = "block"; gBtn.innerText = "Open Surprise 🎁";
+                gBtn.onclick = () => {
+                    document.getElementById('result-page').classList.remove('active');
+                    document.getElementById('gift-page').classList.add('active');
+                };
             } else {
-                text.innerText = `You got ${score}/11. Babbyy, you need 11/11 for the surprise! 🌸`;
-                giftBtn.style.display = 'block';
-                giftBtn.innerText = "Try Again 🔄";
-                giftBtn.onclick = () => location.reload();
+                resText.innerText = `You got ${score}/11. Try again for the gift! 🌸`;
+                gBtn.style.display = "block"; gBtn.innerText = "Try Again 🔄";
+                gBtn.onclick = () => location.reload();
             }
         }, 500);
     }
 
     function createFireworks() {
-        for (let i = 0; i < 12; i++) {
+        for (let i = 0; i < 10; i++) {
             const p = document.createElement('div');
             p.className = 'particle';
-            p.style.backgroundColor = ['#ffafcc', '#bde0fe', '#a2d2ff'][Math.floor(Math.random()*3)];
+            p.style.backgroundColor = '#ffafcc';
             p.style.left = '50%'; p.style.top = '50%';
             document.body.appendChild(p);
-            const dX = (Math.random() - 0.5) * 400;
-            const dY = (Math.random() - 0.5) * 400;
-            p.animate([{opacity: 1}, {transform: `translate(${dX}px, ${dY}px)`, opacity: 0}], 1000).onfinish = () => p.remove();
+            const dX = (Math.random() - 0.5) * 300;
+            const dY = (Math.random() - 0.5) * 300;
+            p.animate([{opacity: 1}, {transform: `translate(${dX}px, ${dY}px)`, opacity: 0}], 800).onfinish = () => p.remove();
         }
     }
 
-    function showGift() {
-        document.getElementById('result-page').classList.remove('active');
-        document.getElementById('gift-page').classList.add('active');
-    }
-
     function revealMessage() {
-        const box = document.getElementById('gift-box');
-        box.classList.add('pop-out');
-        setTimeout(() => {
-            box.innerHTML = "🥹🫶🏻😙";
-            box.style.animation = "none";
-            document.getElementById('final-message').innerText = "You are the best thing that ever happened to me! The password is Archanamadhu@7736";
-            createFireworks();
-        }, 300);
+        document.getElementById('gift-box').innerHTML = "🥹🫶🏻😙";
+        document.getElementById('final-message').innerText = "You are my everything! Password: Archanamadhu@7736";
+        createFireworks();
     }
 </script>
 </body>
