--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <p style="font-size: 0.9rem;">Follow the instruction:</p>
         <div class="instruction-list">
             <div class="instruction-item">✨ 1. Don’t Smile.</div>
-            <div class="instruction-item">✨ 2. Correct **EVERY** answer (11/11).</div>
+            <div class="instruction-item">✨ 2. Correct all the answers (11/11).</div>
             <div class="instruction-item">✨ 3. Unlock your Passcode for your surprise</div>
         </div>
         <button onclick="startQuiz()">Babbee Are you Ready! ✨</button>
