--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
         }
 
         #gift-box:hover { transform: scale(1.2); }
-
         #gift-box.open { animation: popOpen 0.5s forwards; }
 
         @keyframes wobble {
@@ -277,17 +276,17 @@
         '#ff99c8', '#fcf6bd', '#d0f4de', '#a9def9', '#e4c1f9'
     ];
 
-    // Generating exactly 500 curves
-    for(let i = 0; i < 500; i++) {
+    // Settings changed: 300 curves and thicker lines
+    for(let i = 0; i < 300; i++) {
         curveLines.push({
             yBase: Math.random() * canvas.height,
-            amplitude: Math.random() * 40 + 10,
-            frequency: Math.random() * 0.006 + 0.001,
-            speed: Math.random() * 0.015 + 0.005,
+            amplitude: Math.random() * 50 + 15,
+            frequency: Math.random() * 0.005 + 0.001,
+            speed: Math.random() * 0.012 + 0.004,
             offset: Math.random() * 5000,
             color: colors[Math.floor(Math.random() * colors.length)],
-            width: Math.random() * 1.5 + 0.5,
-            opacity: Math.random() * 0.2 + 0.1 // Lower opacity for 500 lines to look elegant
+            width: Math.random() * 4 + 2, // Thicker lines (range 2px to 6px)
+            opacity: Math.random() * 0.15 + 0.05 // Slightly lower opacity for visual balance
         });
     }
 
@@ -301,7 +300,7 @@
             ctx.lineWidth = line.width;
             
             ctx.moveTo(0, line.yBase);
-            for (let x = 0; x < canvas.width; x += 15) { // Skip points slightly for performance
+            for (let x = 0; x < canvas.width; x += 20) { 
                 const y = line.yBase + Math.sin(x * line.frequency + (time * line.speed) + line.offset) * line.amplitude;
                 ctx.lineTo(x, y);
             }
